--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   geocoding: ^3.0.0
   geolocator: ^13.0.1
   flutter_bloc: ^8.1.6
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
